--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -19,7 +19,7 @@
     <div class="container" id="cv-form">
         <h1 class="text-center my-4 mx-4">CV Builder</h1>
         <p class="text-center">By Abhishek Shaw :)</p>
-        <h5 class="text-center"><a href="" target="_blank">Check Sample Resume here</a></h1>
+        <h5 class="text-center"><a href="https://drive.google.com/file/d/1J2qpHVuDwl_Rt12Q8ClOxdeHFT7JGev9/view?usp=sharing" target="_blank">Check Sample Resume here</a></h1>
         <div class="row my-5">
             <div class="col-md-6 my-5">
                 <h1>Personal Information</h1>
