--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -285,12 +285,12 @@
                             <h5>TECHINAL SKILLS :</h5>
                             <div class="container">
                                 <div class="form-group mt-2">
-                                    <label for="ToolField">Langauge and Tools </label>
+                                    <label for="ToolField">Technical Skills and Tools </label>
                                     <input type="text" name="tool" id="ToolField" class="form-control"
                                         placeholder="C , C++ , Spring Boot , Matlab " required />
                                 </div>
                                 <div class="form-group mt-2">
-                                    <label for="SubField">Subjects of Preference </label>
+                                    <label for="SubField">Subjects of Interest </label>
                                     <input type="text" name="subField" id="SubField" class="form-control" placeholder=" ELECTRICAL MACHINES, COMPUTER NETWORK
                                 THEORY, DBMS " required />
                                 </div>
