--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -395,11 +395,11 @@
         <h5 class="font-weight-bold text-uppercase"><u>Technical Skills</u>:</h5>
         <table>
             <tr>
-                <th class="font-weight-bold">Langauges Known</th>
+                <th class="font-weight-bold">Langauges and Tools</th>
                 <td id="ToolFieldT">C++ , Python , JavaScript</td>
             </tr>
             <tr>
-                <th class="font-weight-bold">Subjects of Preference</th>
+                <th class="font-weight-bold">Subject of Interest</th>
                 <td id="SubFieldT">ELECTRICAL MACHINES, ELECTRICAL CIRCUIT
                     THEORY, DBMS</td>
             </tr>
