--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -395,7 +395,7 @@
         <h5 class="font-weight-bold text-uppercase"><u>Technical Skills</u>:</h5>
         <table>
             <tr>
-                <th class="font-weight-bold">Langauges and Tools</th>
+                <th class="font-weight-bold">Langauges and Tool</th>
                 <td id="ToolFieldT">C++ , Python , JavaScript</td>
             </tr>
             <tr>
