--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -395,7 +395,7 @@
         <h5 class="font-weight-bold text-uppercase"><u>Technical Skills</u>:</h5>
         <table>
             <tr>
-                <th class="font-weight-bold">Langauges and Tool</th>
+                <th class="font-weight-bold">Languages and Tool</th>
                 <td id="ToolFieldT">C++ , Python , JavaScript</td>
             </tr>
             <tr>
@@ -432,7 +432,7 @@
             </tr>
             <tr>
                 <th class="font-weight-bold">Personal Stength </th>
-                <td id="StrengthFieldT">Adaptibility , Team Worker, Leadership</td>
+                <td id="StrengthFieldT">Adaptibility, Team Worker, Leadership</td>
             </tr>
         </table>
         <br>
