--- a/Resume-builder/index.html
+++ b/Resume-builder/index.html
@@ -21,7 +21,7 @@
         <p class="text-center">By Abhishek Shaw :)</p>
         <h5 class="text-center"><a
                 href="https://drive.google.com/file/d/1J2qpHVuDwl_Rt12Q8ClOxdeHFT7JGev9/view?usp=sharing"
-                target="_blank">Check Sample Resume here</a></h1>
+                target="_blank">Check Sample Resume here</a></h5>
             <div class="row my-5">
                 <div class="col-md-6 my-5">
                     <h1>Personal Information</h1>
@@ -329,9 +329,7 @@
         <!-- Carrer objectives -->
         <h5 class="text-uppercase font-weight-bold"><u>Career Objectives :</u></h5>
         <h5 id="ObjFieldT">To work for an organization which provides me the opportunity to explore new areas and gain
-            knowledge in
-            this
-            dynamic and disruptive environment.</h5>
+            knowledge in this dynamic and disruptive environment.</h5>
 
         <!-- Academic details -->
         <h5 class="font-weight-bold text-uppercase"><u>Academic Qualification</u> :</h5>
